# patch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.debug  README.md  TODO.md  docker-compose.yml  meson.build  meson.options
.cache/clangd/index/: arch.h.90D58015C012DD3C.idx  arm64.c.ED77664722ED84E7.idx  arm64_common.c.4BB1A794DBE8F7B8.idx  darwin.c.DD9B9AD0EE474460.idx  patch.c.B31DE5F0D3DAE0B0.idx  patch.h.400AF88FDD2E8B09.idx  patch_arch.h.2E286DEAE028784A.idx  patch_internal.h.514BD4FCD2A68013.idx  pattern.h.F23B1FFF84A984D4.idx  platform.h.9DC3A380FBA70F49.idx  registry.c.E9A08B38BCE1A49B.idx  test_basic.c.5638821150D332CF.idx  trampoline.c.81E77409266816C3.idx
.github/workflows/: ci.yml
examples/: api_mock.c  argument_modify.c  basic_hook.c  function_trace.c  malloc_tracker.c  meson.build
include/patch/: patch.h  patch_arch.h  patch_hook.h
scripts/: test-docker.sh
src/: breakpoint.c  breakpoint.h  dispatcher.c  futex.h  patch.c  patch_internal.h  trampoline.c  watchpoint.c  watchpoint.h
src/arch/: arch.h  arm64.c  x86_64.c
src/pattern/: PATTERNS.md  arm64_common.c  pattern.h  registry.c  x86_64_common.c
src/platform/: darwin.c  linux.c  platform.h
test/: TESTING.md  test_basic.c  test_comprehensive.c  test_hooks.c  test_realworld.c
